# tsg-lazer

./: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/hubs/: base.py  spectator.py
app/api/v2/: __init__.py  admin.py  beatmaps.py  me.py  notifications.py  oauth.py  password_reset.py  rankings.py  register.py  schemas.py  scores.py  server.py  users.py
app/core/: bbcode.py  config.py  database.py  privileges.py
app/models/: user.py
app/protocol/: enums.py
app/services/: beatmaps.py
app/usecases/: __init__.py  osu_files.py  performance.py  stats.py
scripts/: README.md  recompute_stats.py
